--- a/Familyindex.htm
+++ b/Familyindex.htm
@@ -1,19 +1,34 @@
+<!DOCTYPE html5>
+<html lang="en-US">
 <title>
 	Ishaan-Lego
 </title>
+<meta charset="UTF-8">
 
 <head>
 	<link rel="stylesheet" type="text/css" href="Familyhome.css">
+	<script src="processing.js"></script>
 </head>
-
+<body>
 <h1>Ishaans' Lego creations</h1>
 
 <ul>
-	<li> Home </li>
-	<li> Gallery </li>
-	<li> Contact </li>
+	<li> <a href="Familyindex.htm">Home</a> </li>
+	<li> <a href="Galleryindex.htm">Gallery</a> </li>
+	<li> <a href="Contactindex.htm">Contact</a> </li>
 </ul>
 
 <div>
 	<p> Lego is exciting to build and learn.  I have spent hours building them and continue to do so.  Thanks for looking at my creations </p>
+	<!--img src="Example.jpg" alt="Lego Image" width="284" height="284"-->
+	<canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;"></canvas>
 </div>
+
+<svg width="200" height="200">
+  <circle cx="0" cy="0" r="40"
+  stroke="green" stroke-width="4" fill="yellow" />
+Sorry, your browser does not support inline SVG.
+</svg>
+
+</body>
+</html>
